<resources>
    <string name="app_name">Adivinanzas</string>
    <string name="adivinanza"></string>
    <string name="Respuesta"> Respuesta</string>
    <string name="Fallos">Fallos</string>
    <string name="Comprobar">Comprobar</string>
    <string name="Aciertos">Aciertos</string>
    <string name="Intentos">Intentos restantes</string>
    <string name="aleatorio">Aleatorio</string>
    <string name="normal">Normal</string>
    <string name="Bienvenida">Bienvenid@ al juego de las Adivinanzas</string>
    <string name="texto">Tienes 3 intentos para resolver cada pregunta, una vez acabados te dirá la respuesta :)</string>
    <string name="Volver">Volver</string>
</resources>