<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numFallos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fallos" />

    <TextView
        android:id="@+id/aciertos"
        android:layout_width="142dp"
        android:layout_height="33dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/Aciertos"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toEndOf="@+id/fallos"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fallos"
        android:layout_width="125dp"
        android:layout_height="31dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/Fallos"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adivinanza"
        android:layout_width="364dp"
        android:layout_height="80dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/adivinanza"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fallos" />

    <TextView
        android:id="@+id/intentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/Intentos"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adivinanza" />

    <EditText
        android:id="@+id/respuesta"
        android:layout_width="262dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intentos" />

    <Button
        android:id="@+id/buttonComprobar"
        android:layout_width="177dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/Comprobar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuesta" />

    <TextView
        android:id="@+id/numAciertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aciertos" />

    <TextView
        android:id="@+id/numIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="36dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/intentos"
        app:layout_constraintTop_toBottomOf="@+id/adivinanza" />

</androidx.constraintlayout.widget.ConstraintLayout>